Add: A lot of code that initialized my most novel idea to the day
- The physics has broken in the process and  I have to fix it.
- I brought react native skia for performant canvas drawing.
- I might need to change the game engine library code, or write my own library
- Matter.js is great, but I might need to learn about its rules

--- a/app.json
+++ b/app.json
@@ -3,9 +3,10 @@
     "name": "reactNativeGame",
     "slug": "reactNativeGame",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "jsEngine": "hermes",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -14,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
