--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.5",
+    "@shopify/react-native-skia": "0.1.196",
+    "expo": "^49.0.23",
+    "expo-status-bar": "~1.6.0",
+    "matter-js": "^0.18.0",
+    "react": "18.2.0",
+    "react-native": "0.72.10",
     "react-native-game-engine": "^1.2.0",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
