--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/matter-js": "^0.19.6",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.5.2"
   },
   "private": true
 }
