--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-native": "0.72.10",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
