--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@shopify/react-native-skia": "0.1.196",
+    "cross-env": "^7.0.3",
     "expo": "^49.0.23",
+    "expo-dev-client": "~2.4.13",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "matter-js": "^0.18.0",
     "react": "18.2.0",
@@ -19,8 +23,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "zustand": "^4.5.2",
-    "expo-linear-gradient": "~12.3.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
