--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "storybook-generate": "sb-rn-get-stories",
     "storybook": "cross-env STORYBOOK_ENABLED='true' expo start --offline --clear",
     "storybook:ios": "cross-env STORYBOOK_ENABLED='true' expo ios",
-    "storybook:android": "cross-env STORYBOOK_ENABLED='true' expo android"
+    "storybook:android": "cross-env STORYBOOK_ENABLED='true' expo android",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -21,6 +22,7 @@
     "expo-dev-client": "~2.4.13",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "jest-expo": "49.0.0",
     "matter-js": "^0.18.0",
     "punycode": "^2.3.1",
     "react": "18.2.0",
@@ -30,6 +32,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-test-renderer": "18.2.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -39,10 +42,26 @@
     "@storybook/addon-ondevice-controls": "^7.6.20",
     "@storybook/addon-ondevice-notes": "^7.6.20",
     "@storybook/react-native": "^7.6.20",
+    "@testing-library/react-native": "^12.6.0",
+    "@types/jest": "^29.5.12",
     "@types/matter-js": "^0.19.6",
     "@types/react": "^18.3.3",
     "@types/react-native": "^0.73.0",
+    "jest": "^29.7.0",
     "typescript": "^5.5.2"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|@shopify/react-native-skia)"
+    ],
+    "setupFiles": [
+      "@shopify/react-native-skia/jestSetup.js",
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/src/$1"
+    }
+  }
 }
