feat(scene): Add tests for scene switching, navigation, and transitions components and hooks.
- Add documentation for the component and the hooks and the context.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     ],
     "setupFiles": [
       "@shopify/react-native-skia/jestSetup.js",
-      "./node_modules/react-native-gesture-handler/jestSetup.js"
+      "./node_modules/react-native-gesture-handler/jestSetup.js",
+      "./jestSetup.js"
     ],
     "moduleNameMapper": {
       "@/(.*)": "<rootDir>/src/$1"
