fix(rnsge.scene): Fix tests for Scene.tsx

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|@shopify/react-native-skia)"
     ],
+    "globalSetup": "@shopify/react-native-skia/globalJestSetup.js",
     "setupFiles": [
       "@shopify/react-native-skia/jestSetup.js",
       "./node_modules/react-native-gesture-handler/jestSetup.js",
