--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "^7.7.0",
     "@shopify/react-native-skia": "0.1.196",
+    "@storybook/react": "^8.4.4",
     "cross-env": "^7.0.3",
     "expo": "^49.0.23",
     "expo-dev-client": "~2.4.13",
