--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "^7.7.0",
-    "@shopify/react-native-skia": "0.1.196",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@shopify/react-native-skia": "1.5.0",
     "@storybook/react": "^8.4.4",
     "cross-env": "^7.0.3",
-    "expo": "^49.0.23",
-    "expo-dev-client": "~2.4.13",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-status-bar": "~1.6.0",
-    "jest-expo": "49.0.0",
+    "expo": "^52.0.19",
+    "expo-dev-client": "~5.0.6",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-status-bar": "~2.0.0",
+    "jest-expo": "~52.0.2",
     "matter-js": "^0.18.0",
     "punycode": "^2.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-game-engine": "^1.2.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-test-renderer": "18.2.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
@@ -47,10 +47,10 @@
     "@testing-library/react-native": "^12.6.0",
     "@types/jest": "^29.5.12",
     "@types/matter-js": "^0.19.6",
-    "@types/react": "^18.3.3",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
-    "typescript": "^5.5.2"
+    "typescript": "~5.3.3"
   },
   "private": true,
   "jest": {
