--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
     "@shopify/react-native-skia": "1.5.0",
     "@storybook/react": "^8.4.4",
     "cross-env": "^7.0.3",
@@ -38,7 +40,10 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-syntax-highlighter": "^2.1.0",
     "react-native-web": "~0.19.13",
+    "react-syntax-highlighter": "^15.6.1",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^10.0.0",
